--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,7 @@
 [build]
 builder = "NIXPACKS"
 root = "backend"
+buildCommand = "pip install -r requirements.txt"
 
 [deploy]
 startCommand = "gunicorn backend.app:app"
