--- a/railway.toml
+++ b/railway.toml
@@ -5,5 +5,6 @@ buildCommand = "python -m pip install -r requirements.txt"
 
 [deploy]
 startCommand = "gunicorn backend.app:app"
+preDeployCommand = "flask init-db"
 healthcheckPath = "/"
 healthcheckTimeout = 120
