--- a/railway.toml
+++ b/railway.toml
@@ -6,5 +6,5 @@ buildCommand = "python -m pip install -r requirements.txt"
 [deploy]
 startCommand = "gunicorn app:app"
 preDeployCommand = "flask init-db"
-healthcheckPath = "/"
+healthcheckPath = "/api/entries"
 healthcheckTimeout = 120
