--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@ root = "backend"
 buildCommand = "python -m pip install -r requirements.txt"
 
 [deploy]
-startCommand = "gunicorn app:app"
+startCommand = "gunicorn --log-level debug app:app"
 preDeployCommand = "flask init-db"
 healthcheckPath = "/api/entries"
 healthcheckTimeout = 120
